# towl

./: Cargo.toml  DEV  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: fs.rs  logger.rs
corelib/: Cargo.toml
corelib/src/: fs.rs  lib.rs  logger.rs
daemon/: Cargo.toml  README  daemon.json  towl.service
daemon/src/: main.rs
proto/: Cargo.toml  build.rs
proto/proto/: towl.proto
proto/src/: lib.rs  towl.rs
server/: Cargo.toml
server/src/: main.rs
