[package]
name = "corelib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo"
test = false
bench = false

[dependencies]
env_logger = "0.10.0"
log = "0.4.20"
bincode = "1.3.3"
serde = {version="1.0.188", features=["derive"]}
chrono = {version = "0.4.31", features=["serde"]}
tokio = {version = "1.32", features=["full"]}