[package]
edition = "2021"
name = "proto"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.2"
serde = {version = "1.0.147", features = ["derive"]}
tokio = {version = "1.21.2", features = ["full"]}
tonic = "0.8.2"

[build-dependencies]
tonic-build = "0.8.2"
