[package]
edition = "2021"
name = "server"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = {version = "0.4.23", features = ["serde"]}
proto = {path = "../proto"}
serde = {version = "1.0.147", features = ["derive"]}
tokio = {version = "1.21.2", features = ["full"]}
tokio-stream = {version = "0.1.11", features = ["net"]}
tonic = "0.8.2"
warp = "0.3.3"
corelib = {path="../corelib"}